// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mint (MCV) — empirical tiers & retention (no on-chain table required) Baseline & smoke seeds baseline and confirms accrual *if any immediate signal exists* 1`] = `
Object {
  "pool": "0x61c36a8d610163660E21a8b7359e1Cac0C9133e1",
  "reserves": Object {
    "asset": "100000000000000000000",
    "usdc": "100000000000000000000",
  },
}
`;

exports[`Mint (MCV) — empirical tiers & retention (no on-chain table required) Baseline & smoke seeds baseline and confirms accrual *if any immediate signal exists* 2`] = `185230`;

exports[`Mint (MCV) — empirical tiers & retention (no on-chain table required) Baseline & smoke seeds baseline and confirms accrual *if any immediate signal exists* 3`] = `
Object {
  "pool": "0x61c36a8d610163660E21a8b7359e1Cac0C9133e1",
  "reserves": Object {
    "asset": "148125000000000000000",
    "usdc": "148125000000000000000",
  },
}
`;

exports[`Mint (MCV) — empirical tiers & retention (no on-chain table required) Baseline & smoke seeds baseline and confirms accrual *if any immediate signal exists* 4`] = `103484`;

exports[`Mint (MCV) — empirical tiers & retention (no on-chain table required) Baseline & smoke seeds baseline and confirms accrual *if any immediate signal exists* 5`] = `
Object {
  "accrualSignal": false,
  "deltas": Object {
    "treasCounter": "0",
    "treasTok": Object {
      "a": "0",
      "u": "0",
    },
    "vaultEarned": "0",
    "vaultTok": Object {
      "a": "0",
      "u": "0",
    },
  },
  "rebateBps": 0,
  "retentionBps": 0,
  "sharePct": 34.69,
}
`;

exports[`Mint (MCV) — empirical tiers & retention (no on-chain table required) Empirical schedule (monotonicity & snapshots) drives LP share across targets and observes non-decreasing bps (when signals exist) 1`] = `120653`;

exports[`Mint (MCV) — empirical tiers & retention (no on-chain table required) Empirical schedule (monotonicity & snapshots) drives LP share across targets and observes non-decreasing bps (when signals exist) 2`] = `103460`;

exports[`Mint (MCV) — empirical tiers & retention (no on-chain table required) Empirical schedule (monotonicity & snapshots) drives LP share across targets and observes non-decreasing bps (when signals exist) 3`] = `103460`;

exports[`Mint (MCV) — empirical tiers & retention (no on-chain table required) Empirical schedule (monotonicity & snapshots) drives LP share across targets and observes non-decreasing bps (when signals exist) 4`] = `
Object {
  "accrualSignal": false,
  "deltas": Object {
    "treasCounter": "0",
    "treasTok": Object {
      "a": "0",
      "u": "0",
    },
    "vaultEarned": "0",
    "vaultTok": Object {
      "a": "0",
      "u": "0",
    },
  },
  "rebateBps": 0,
  "retentionBps": 0,
  "sharePct": 45.05,
  "targetPct": 1,
}
`;

exports[`Mint (MCV) — empirical tiers & retention (no on-chain table required) Empirical schedule (monotonicity & snapshots) drives LP share across targets and observes non-decreasing bps (when signals exist) 5`] = `103460`;

exports[`Mint (MCV) — empirical tiers & retention (no on-chain table required) Empirical schedule (monotonicity & snapshots) drives LP share across targets and observes non-decreasing bps (when signals exist) 6`] = `103460`;

exports[`Mint (MCV) — empirical tiers & retention (no on-chain table required) Empirical schedule (monotonicity & snapshots) drives LP share across targets and observes non-decreasing bps (when signals exist) 7`] = `
Object {
  "accrualSignal": false,
  "deltas": Object {
    "treasCounter": "0",
    "treasTok": Object {
      "a": "0",
      "u": "0",
    },
    "vaultEarned": "0",
    "vaultTok": Object {
      "a": "0",
      "u": "0",
    },
  },
  "rebateBps": 0,
  "retentionBps": 0,
  "sharePct": 45.65,
  "targetPct": 6,
}
`;

exports[`Mint (MCV) — empirical tiers & retention (no on-chain table required) Empirical schedule (monotonicity & snapshots) drives LP share across targets and observes non-decreasing bps (when signals exist) 8`] = `103460`;

exports[`Mint (MCV) — empirical tiers & retention (no on-chain table required) Empirical schedule (monotonicity & snapshots) drives LP share across targets and observes non-decreasing bps (when signals exist) 9`] = `103460`;

exports[`Mint (MCV) — empirical tiers & retention (no on-chain table required) Empirical schedule (monotonicity & snapshots) drives LP share across targets and observes non-decreasing bps (when signals exist) 10`] = `
Object {
  "accrualSignal": false,
  "deltas": Object {
    "treasCounter": "0",
    "treasTok": Object {
      "a": "0",
      "u": "0",
    },
    "vaultEarned": "0",
    "vaultTok": Object {
      "a": "0",
      "u": "0",
    },
  },
  "rebateBps": 0,
  "retentionBps": 0,
  "sharePct": 46.23,
  "targetPct": 12,
}
`;

exports[`Mint (MCV) — empirical tiers & retention (no on-chain table required) Empirical schedule (monotonicity & snapshots) drives LP share across targets and observes non-decreasing bps (when signals exist) 11`] = `103460`;

exports[`Mint (MCV) — empirical tiers & retention (no on-chain table required) Empirical schedule (monotonicity & snapshots) drives LP share across targets and observes non-decreasing bps (when signals exist) 12`] = `103460`;

exports[`Mint (MCV) — empirical tiers & retention (no on-chain table required) Empirical schedule (monotonicity & snapshots) drives LP share across targets and observes non-decreasing bps (when signals exist) 13`] = `
Object {
  "accrualSignal": false,
  "deltas": Object {
    "treasCounter": "0",
    "treasTok": Object {
      "a": "0",
      "u": "0",
    },
    "vaultEarned": "0",
    "vaultTok": Object {
      "a": "0",
      "u": "0",
    },
  },
  "rebateBps": 0,
  "retentionBps": 0,
  "sharePct": 46.8,
  "targetPct": 22,
}
`;

exports[`Mint (MCV) — empirical tiers & retention (no on-chain table required) Empirical schedule (monotonicity & snapshots) drives LP share across targets and observes non-decreasing bps (when signals exist) 14`] = `103460`;

exports[`Mint (MCV) — empirical tiers & retention (no on-chain table required) Empirical schedule (monotonicity & snapshots) drives LP share across targets and observes non-decreasing bps (when signals exist) 15`] = `103460`;

exports[`Mint (MCV) — empirical tiers & retention (no on-chain table required) Empirical schedule (monotonicity & snapshots) drives LP share across targets and observes non-decreasing bps (when signals exist) 16`] = `
Object {
  "accrualSignal": false,
  "deltas": Object {
    "treasCounter": "0",
    "treasTok": Object {
      "a": "0",
      "u": "0",
    },
    "vaultEarned": "0",
    "vaultTok": Object {
      "a": "0",
      "u": "0",
    },
  },
  "rebateBps": 0,
  "retentionBps": 0,
  "sharePct": 47.36,
  "targetPct": 30,
}
`;

exports[`Mint (MCV) — empirical tiers & retention (no on-chain table required) Empirical schedule (monotonicity & snapshots) drives LP share across targets and observes non-decreasing bps (when signals exist) 17`] = `168037`;

exports[`Mint (MCV) — empirical tiers & retention (no on-chain table required) Empirical schedule (monotonicity & snapshots) drives LP share across targets and observes non-decreasing bps (when signals exist) 18`] = `103460`;

exports[`Mint (MCV) — empirical tiers & retention (no on-chain table required) Empirical schedule (monotonicity & snapshots) drives LP share across targets and observes non-decreasing bps (when signals exist) 19`] = `
Object {
  "accrualSignal": false,
  "deltas": Object {
    "treasCounter": "0",
    "treasTok": Object {
      "a": "0",
      "u": "0",
    },
    "vaultEarned": "0",
    "vaultTok": Object {
      "a": "0",
      "u": "0",
    },
  },
  "rebateBps": 0,
  "retentionBps": 0,
  "sharePct": 54.38,
  "targetPct": 55,
}
`;
